force-app/main/default/objects/Students__c/Students__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>