force-app/main/default/objects/Students__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <type>Lookup</type>
</CustomField>