force-app/main/default/objects/Students__c/fields/Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_Update__c</fullName>
    <label>Field Update</label>
    <length>20</length>
    <type>Text</type>
</CustomField>