force-app/main/default/objects/Students__c/fields/Total_Number_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Credits__c</fullName>
    <label>Total Number of Credits</label>
    <summarizedField>Course_Selection__c.credits__c</summarizedField>
    <summaryForeignKey>Course_Selection__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>