force-app/main/default/objects/Students__c/fields/UNIVERSE__c.field-meta.xml
<CustomField>
    <fullName>UNIVERSE__c</fullName>
    <label>UNIVERSE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SATURN</fullName>
            </value>
            <value>
                <fullName>EARTH</fullName>
            </value>
            <value>
                <fullName>JUPITOR</fullName>
            </value>
            <value>
                <fullName>MARS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>