force-app/main/default/objects/Students__c/recordTypes/International_Students.recordType-meta.xml
<RecordType>
    <fullName>International_Students</fullName>
    <active>true</active>
    <description>This Record Type is used to store Int&apos;l Students Information</description>
    <label>International Students</label>
</RecordType>