force-app/main/default/objects/Students__c/recordTypes/Local_Students.recordType-meta.xml
<RecordType>
    <fullName>Local_Students</fullName>
    <active>true</active>
    <description>This Record Type is used to store Local students Information</description>
    <label>Local Students</label>
</RecordType>