force-app/main/default/objects/Students__c/validationRules/Make_Sure_Users_Enter_DOB_for_US_student.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Sure_Users_Enter_DOB_for_US_student</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Date_of_Birth__c)   &amp;&amp;  ISPICKVAL(Country__c,&apos;US&apos;)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Please Enter the DOB</errorMessage>
</ValidationRule>