force-app/main/default/objects/Students__c/validationRules/Student_should_be_more_than_18_years_old.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_should_be_more_than_18_years_old</fullName>
    <active>false</active>
    <errorConditionFormula>(YEAR(TODAY()) - YEAR(Date_of_Birth__c))    &lt;= 18</errorConditionFormula>
    <errorMessage>Student Should be above 18 years old</errorMessage>
</ValidationRule>