force-app/main/default/objects/Students__c/listViews/Int_l_Students_Only.listView-meta.xml
<ListView>
    <fullName>Int_l_Students_Only</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>ID_Number__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Students__c.International_Students</value>
    </filters>
    <label>Int&apos;l Students Only</label>
    <language>en_US</language>
</ListView>